Bug 34920 - [FORMATTING] Full justification does nothing
Summary: [FORMATTING] Full justification does nothing
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-02 06:01 UTC by ⁨خالد حسني⁩
Modified: 2011-03-07 08:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Test file (16.72 KB, application/vnd.oasis.opendocument.text)
2011-03-02 06:01 UTC, ⁨خالد حسني⁩
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ⁨خالد حسني⁩ 2011-03-02 06:01:26 UTC
Created attachment 44019 [details]
Test file

In git master, full justification is ignored and text is always left aligned (or right, based on main direction). Not reproducible with 3.3.1
Comment 1 Thomas Arnhold 2011-03-02 06:11:02 UTC
Can confirm this.
Comment 2 Caolán McNamara 2011-03-07 08:20:11 UTC
digging into this I bet I can see where it went wrong
Comment 3 Caolán McNamara 2011-03-07 08:31:47 UTC
http://cgit.freedesktop.org/libreoffice/writer/commit/?id=cb3cd9644fdc556234f62fb80f6ecf60afedf3cf

sw/source/core/text/itradj.cxx call to FormatBlock() went away by accident