Resolves: fdo#34920 restore FormatBlock

Reverts the accidental removal of this in
cb3cd9644fdc556234f62fb80f6ecf60afedf3cf